# customized_precision_pagerank

./: LICENSE
code/: bit_level_functions.hpp  constants.hpp  coo_matrix.hpp  coo_matrix.inc.cpp  csr_matrix.hpp  csr_matrix.inc.cpp  ell_matrix.hpp  ell_matrix.inc.cpp  macros.hpp  mmio.h  precision.hpp  split_pointer.hpp  test.cpp  types.hpp
code/cpu/: CMakeLists.txt  avx2_helper.hpp  cpu_kernel_selector.hpp  cpu_kernels.hpp  csr_benchmark.hpp  csr_benchmark.inc.cpp  csr_page_rank.hpp  csr_page_rank.inc.cpp  ell_benchmark.hpp  ell_benchmark.inc.cpp  ell_page_rank.hpp  ell_page_rank.inc.cpp  main.cpp  main_epsilon.cpp  omp_helper.hpp  runbenchmark.cpp  split_pointer_helper.hpp  thread_buffer.hpp
code/gpu/: CMakeLists.txt  csr_benchmark.cuh  csr_benchmark.inc.cu  csr_page_rank.cuh  csr_page_rank.inc.cu  ell_benchmark.cuh  ell_benchmark.inc.cu  ell_page_rank.cuh  ell_page_rank.inc.cu  gpu_kernels.cuh  main.cu  main_epsilon.cu  runbenchmark.cu  split_pointer_helper.cuh
results/: csr_juwels48_interleaved_128B_181128_0547.m  csr_juwels48_interleaved_128B_181130_0022.m  csr_juwels48_interleaved_181127_1223.m  csr_juwels48_interleaved_181129_2335.m  csr_juwels48_split_181128_0552.m  csr_juwels48_split_181129_2249.m  csr_v100_181128_0251.m  diffNorm1.m  ell_juwels48_interleaved_128B_181128_0547.m  ell_juwels48_interleaved_128B_181130_0022.m  ell_juwels48_interleaved_181127_1223.m  ell_juwels48_interleaved_181129_2056.m  ell_juwels48_interleaved_181129_2335.m  ell_juwels48_split_181128_0552.m  ell_juwels48_split_181129_2249.m  ell_v100_181128_0251.m  plot_data_csr.m  plot_data_ell.m  result_csr_180730_0200.m  result_csr_180730_1036.m  result_csr_180803_1456.m  result_csr_180808_1410.m  result_csr_v100_180813_0600.m  result_ell_180730_0220.m  result_ell_180730_1052.m  result_ell_180803_1510.m  result_ell_180808_1410.m  result_ell_v100_180810_0850.m  runtime.txt
results/heatmap_results/: 180825-1117_heatmap_result.m  180825-1134_heatmap_result.m  heatmap_conversion.m  heatmap_juwels48_interleaved_128B_181128_0547.m  heatmap_juwels48_interleaved_128B_181130_0022.m  heatmap_juwels48_interleaved_181127_1223.m  heatmap_juwels48_interleaved_181129_2334.m  heatmap_juwels48_split_181128_0552.m  heatmap_juwels48_split_181129_2305.m  heatmap_noconversion.m  heatmap_v100_181128_0235.m  plot_heatmaps.m  plot_runtime.m
results/histogram/: create_histogram.m  loading_row_nnz.m
results/raw/: 180810-0850_result_ell_v100.m  180813-0637_result_csr_v100.m
scripts/: build.sh  createHeatmap.sh  prepareMtx.sh  runAllMatrices.sh  unify_m.py
